[tool.poetry]
name = "raspurify-server"
version = "0.1.0"
description = ""
authors = ["jailbreakerVC <54243183+jailbreakerVC@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "raspurify_server"}]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.3.2"
schedule = "^1.2.0"
geopy = "^2.3.0"
load-dotenv = "^0.1.0"
requests = "^2.31.0"
db-sqlite3 = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
